--- a/css/monopoly.css
+++ b/css/monopoly.css
@@ -259,4 +259,11 @@ body{
 }
 .popup-darkbox{
     z-index: 300;
+    top:0;
+    left:0;
+    bottom:0;
+    right:0;
+    background-color:rgba(0,0,0,0.5);
+    font-size: 25px;
+    font-family: Arial;
 }
